# mrobot

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: env.cmake  lint.cmake  prepend.cmake  tests.cmake
scripts/: CMakeLists.txt  mrobot-setup.sh  setup.sh  template.conf
src/: CMakeLists.txt  bluetooth.cc  bluetooth.hpp  comm.hpp  conf.cc  conf.hpp  gpio.cc  gpio.hpp  led.cc  led.hpp  lights_controller.cc  lights_controller.hpp  main.cc  message.cc  message.hpp  mqtt_client.cc  mqtt_client.hpp  robot.cc  robot.hpp  robot_messages_handlers.cc  robot_messages_handlers.hpp  robot_messages_router.cc  robot_messages_router.hpp  robot_messaging.cc  robot_messaging.hpp
tests/: CMakeLists.txt
tests/bluetooth/: CMakeLists.txt  simplescan.cc
tests/mock/: gpio.cc
tests/networking/: CMakeLists.txt  mqtt.cc
tests/resources/: dummy.conf
tests/simulation/: CMakeLists.txt
tests/unit/: CMakeLists.txt  UnitTest.hpp  conf.cc  gpio.cc  message.cc
